create serrch bar

--- a/index.html
+++ b/index.html
@@ -1,13 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Nvida Shop </title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Nvida Shop</title>
+  </head>
+  <body>
+    <!-- Navigation -->
+    <nav class="navbar">
+      <div class="menu-icon"><i></i></div>
+      <div class="nav-img"><img src="" alt="" class="nvida-img" /></div>
+      <form>
+        <div class="search-box">
+          <input type="text" id="search" placeholder="Search..." />
+        </div>
+      </form>
+    </nav>
+
+    <div class="filter-box">
+        <a href="#" data-filter=""  >All</a>
+        <a href="#" data-filter="msi">msi</a>
+        <a href="#" data-filter="asus">asus</a>
+        <a href="#" data-filter="Gigabyte">Gigabyte</a>
+        <a href="#" data-filter="zotac">zotac</a>
+    </div>
+<div class="products">
+    <div class="products-center">
+        <!-- 
+<div class="product">
+    <img src="1.jpg" alt="" class="pro-img">
+    <div>
+        <span>100$</span>
+        <span>titl of products</span>
+    </div>
+</div> -->
+
+    </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="app.js" type="module"></script>
+  </body>
 </html>
