--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Nvida Shop</title>
   </head>
   <body>
     <!-- Navigation -->
     <nav class="navbar">
-      <div class="menu-icon"><i></i></div>
-      <div class="nav-img"><img src="" alt="" class="nvida-img" /></div>
+      <div class="menu-icon">  <i class="fa-solid fa-bars"></i></div>
+      <div class="nav-img"><img src="./images/11.jpg" alt="" class="nvida-img" /></div>
       <form>
         <div class="search-box">
-          <input type="text" id="search" placeholder="Search..." />
+          <input type="text" id="search" placeholder="   Search..." />
         </div>
       </form>
     </nav>
@@ -28,14 +29,8 @@
     </div>
 <div class="products">
     <div class="products-center">
-        <!-- 
-<div class="product">
-    <img src="1.jpg" alt="" class="pro-img">
-    <div>
-        <span>100$</span>
-        <span>titl of products</span>
-    </div>
-</div> -->
+        
+
 
     </div>
 </div>
